--- a/Factores_emision.ipynb
+++ b/Factores_emision.ipynb
@@ -819,6 +819,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def formater2(gf, cont):\n",
+    "    gf[\"Gas\"] = cont\n",
+    "    gf[\"Unidad\"] = \"[g/km]\"\n",
+    "    gf_urb = gf.iloc[:,[0,1,2,3,5,6]]\n",
+    "    gf_int = gf.iloc[:,[0,1,2,4,5,6]]\n",
+    "    gf_urb[\"Ambito\"] = \"Urbano\"\n",
+    "    gf_int[\"Ambito\"] = \"Interurbano\"\n",
+    "    gf_urb.columns = [\"Modo\",\"Motorizacion\", \"Norma\", \"2014\", \"Gas\", \"Unidad\", \"Ambito\"]\n",
+    "    gf_urb = gf_urb[[\"Ambito\", \"Modo\", \"Motorizacion\", \"Norma\", \"Gas\", \"Unidad\", \"2014\"]]\n",
+    "    gf_int.columns = [\"Modo\",\"Motorizacion\", \"Norma\", \"2014\", \"Gas\", \"Unidad\", \"Ambito\"]\n",
+    "    gf_int = gf_int[[\"Ambito\", \"Modo\", \"Motorizacion\", \"Norma\", \"Gas\", \"Unidad\", \"2014\"]]\n",
+    "    gf2 = pd.concat([gf_urb,gf_int], axis=0)\n",
+    "    new_col = \"R1\"\n",
+    "    gf2.insert(loc=0, column=\"Region\", value=new_col)\n",
+    "    final=gf2.copy()\n",
+    "    for i in range(2,17):\n",
+    "        new_col = \"R\"+str(i)\n",
+    "        gf2[\"Region\"]=new_col\n",
+    "        final = pd.concat([final,gf2],axis=0)\n",
+    "    return final"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 204,
    "metadata": {},
    "outputs": [],
@@ -840,186 +868,14 @@
     "gfVOC = formater(gfVOC, \"VOC\")\n",
     "gfCH4 = formater(gfCH4, \"CH4\")\n",
     "gfPM = formater(gfPM, \"PM25\")\n",
-    "#pd.concat([gfNOx,gfCO,gfCH4,gfVOC, gfPM], axis=0).to_excel(\"FE.xlsx\", index=False)\n",
-    "gf_concat = pd.concat([gfNOx,gfCO,gfCH4,gfVOC, gfPM], axis=0)\n",
-    "#final.to_excel(\"NOx.xlsx\", index=False)\n",
-    "n = 2060-2014\n",
-    "años = (pd.concat([gf_concat[[\"2014\"]]] * n, axis=1, ignore_index=True)).rename(lambda x: str(2015 + x), axis=1)"
+    "#pd.concat([gfNOx,gfCO,gfCH4,gfVOC, gfPM], axis=0).to_excel(\"FE.xlsx\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 319,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Ambito</th>\n",
-       "      <th>Modo</th>\n",
-       "      <th>Motorizacion</th>\n",
-       "      <th>Norma</th>\n",
-       "      <th>Gas</th>\n",
-       "      <th>Unidad</th>\n",
-       "      <th>2014</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Interurbano</td>\n",
-       "      <td>BUS ART</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>E1</td>\n",
-       "      <td>SOx</td>\n",
-       "      <td>[g/km]</td>\n",
-       "      <td>0.032954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Interurbano</td>\n",
-       "      <td>BUS ART</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>E2</td>\n",
-       "      <td>SOx</td>\n",
-       "      <td>[g/km]</td>\n",
-       "      <td>0.031661</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Interurbano</td>\n",
-       "      <td>BUS ART</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>E3</td>\n",
-       "      <td>SOx</td>\n",
-       "      <td>[g/km]</td>\n",
-       "      <td>0.032642</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Interurbano</td>\n",
-       "      <td>BUS ART</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>E4</td>\n",
-       "      <td>SOx</td>\n",
-       "      <td>[g/km]</td>\n",
-       "      <td>0.033166</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Interurbano</td>\n",
-       "      <td>BUS ART</td>\n",
-       "      <td>Diesel</td>\n",
-       "      <td>E5</td>\n",
-       "      <td>SOx</td>\n",
-       "      <td>[g/km]</td>\n",
-       "      <td>0.033402</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>81</th>\n",
-       "      <td>Interurbano</td>\n",
-       "      <td>VLP</td>\n",
-       "      <td>Gasolina</td>\n",
-       "      <td>E4</td>\n",
-       "      <td>SOx</td>\n",
-       "      <td>[g/km]</td>\n",
-       "      <td>0.004935</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>Interurbano</td>\n",
-       "      <td>VLP</td>\n",
-       "      <td>Gasolina</td>\n",
-       "      <td>E5</td>\n",
-       "      <td>SOx</td>\n",
-       "      <td>[g/km]</td>\n",
-       "      <td>0.004935</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>Interurbano</td>\n",
-       "      <td>VLP</td>\n",
-       "      <td>Gasolina</td>\n",
-       "      <td>E6abc</td>\n",
-       "      <td>SOx</td>\n",
-       "      <td>[g/km]</td>\n",
-       "      <td>0.004935</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>84</th>\n",
-       "      <td>Interurbano</td>\n",
-       "      <td>VLP</td>\n",
-       "      <td>Gasolina</td>\n",
-       "      <td>E6d</td>\n",
-       "      <td>SOx</td>\n",
-       "      <td>[g/km]</td>\n",
-       "      <td>0.004935</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>Interurbano</td>\n",
-       "      <td>VLP</td>\n",
-       "      <td>Gasolina</td>\n",
-       "      <td>No cat</td>\n",
-       "      <td>SOx</td>\n",
-       "      <td>[g/km]</td>\n",
-       "      <td>0.006249</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>86 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Ambito     Modo Motorizacion   Norma  Gas  Unidad      2014\n",
-       "0   Interurbano  BUS ART       Diesel      E1  SOx  [g/km]  0.032954\n",
-       "1   Interurbano  BUS ART       Diesel      E2  SOx  [g/km]  0.031661\n",
-       "2   Interurbano  BUS ART       Diesel      E3  SOx  [g/km]  0.032642\n",
-       "3   Interurbano  BUS ART       Diesel      E4  SOx  [g/km]  0.033166\n",
-       "4   Interurbano  BUS ART       Diesel      E5  SOx  [g/km]  0.033402\n",
-       "..          ...      ...          ...     ...  ...     ...       ...\n",
-       "81  Interurbano      VLP     Gasolina      E4  SOx  [g/km]  0.004935\n",
-       "82  Interurbano      VLP     Gasolina      E5  SOx  [g/km]  0.004935\n",
-       "83  Interurbano      VLP     Gasolina   E6abc  SOx  [g/km]  0.004935\n",
-       "84  Interurbano      VLP     Gasolina     E6d  SOx  [g/km]  0.004935\n",
-       "85  Interurbano      VLP     Gasolina  No cat  SOx  [g/km]  0.006249\n",
-       "\n",
-       "[86 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 306,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "gk = df.groupby([\"Segment\", \"Pollutant\", \"Fuel\", 'Euro Standard'],as_index=False).mean()\n",
     "gk[[\"EF[g/km]_ECF[MJ/km]_Urb\",\"EF[g/km]_ECF[MJ/km]_Int\", \"velMax\", \"velMin\"]].to_excel(\"Resumen_categoria_combustible.xlsx\",index = True)\n",
@@ -1032,19 +888,15 @@
     "kmLt = gk2.iloc[:,[0,2,3,25,28]]\n",
     "emCO2 = gk2.iloc[:,[0,2,3,26,29]]\n",
     "emSOx = gk2.iloc[:,[0,2,3,27,30]]\n",
-    "emSOx[\"Gas\"] = \"SOx\"\n",
-    "emSOx[\"Unidad\"] = \"[g/km]\"\n",
-    "emSOx_urb = emSOx.iloc[:,[0,1,2,3,5,6]]\n",
-    "emSOx_int = emSOx.iloc[:,[0,1,2,4,5,6]]\n",
-    "emSOx_urb[\"Ambito\"] = \"Urbano\"\n",
-    "emSOx_int[\"Ambito\"] = \"Interurbano\"\n",
-    "emSOx_urb.columns = [\"Modo\",\"Motorizacion\", \"Norma\", \"2014\", \"Gas\", \"Unidad\", \"Ambito\"]\n",
-    "emSOx_urb = emSOx_urb[[\"Ambito\", \"Modo\", \"Motorizacion\", \"Norma\", \"Gas\", \"Unidad\", \"2014\"]]\n",
-    "emSOx_urb\n",
-    "emSOx_int.columns = [\"Modo\",\"Motorizacion\", \"Norma\", \"2014\", \"Gas\", \"Unidad\", \"Ambito\"]\n",
-    "emSOx_int = emSOx_int[[\"Ambito\", \"Modo\", \"Motorizacion\", \"Norma\", \"Gas\", \"Unidad\", \"2014\"]]\n",
-    "emSOx_int\n",
-    "#(df[df[\"Segment\"]==\"CAM PES\"][\"Max Speed [km/h]\"])"
+    "gfSOx = formater2(emSOx, \"SOx\")\n",
+    "gfCO2 = formater2(emCO2, \"CO2\")\n",
+    "gfkmLt = formater2(kmLt, \"km/lt\")\n",
+    "#(df[df[\"Segment\"]==\"CAM PES\"][\"Max Speed [km/h]\"])\n",
+    "gf_concat = pd.concat([gfNOx,gfCO,gfCH4,gfVOC, gfPM, gfSOx, gfCO2, gfkmLt], axis=0)\n",
+    "#final.to_excel(\"NOx.xlsx\", index=False)\n",
+    "n = 2060-2014\n",
+    "years = (pd.concat([gf_concat[[\"2014\"]]] * n, axis=1, ignore_index=True)).rename(lambda x: str(2015 + x), axis=1)\n",
+    "pd.concat([gf_concat,years], axis=1).to_excel(\"FE.xlsx\", index=False)"
    ]
   },
   {
