--- a/Factores_emision.ipynb
+++ b/Factores_emision.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "2JKySxO9tuX9"
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "YGhx0K1LzfXv"
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "h_mgfbsLRpI9"
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "id": "240RUAgjRyVB"
    },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -333,62 +333,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      0.003114\n",
-       "1      0.038914\n",
-       "2      0.344561\n",
-       "3      0.885869\n",
-       "4      1.563435\n",
-       "5      2.136299\n",
-       "6      2.670051\n",
-       "7      0.002214\n",
-       "8      0.014474\n",
-       "9      0.131313\n",
-       "10     0.336516\n",
-       "11     0.594186\n",
-       "12     0.820652\n",
-       "13     1.024376\n",
-       "14     0.002568\n",
-       "15     0.026121\n",
-       "16     0.269045\n",
-       "17     1.196637\n",
-       "18     2.498373\n",
-       "19     3.852750\n",
-       "20     5.107548\n",
-       "21     0.000778\n",
-       "22     0.009688\n",
-       "23     0.099566\n",
-       "24     0.457569\n",
-       "25     0.952144\n",
-       "26     1.475620\n",
-       "27     1.960230\n",
-       "28     0.051837\n",
-       "29     0.358486\n",
-       "30     2.192757\n",
-       "31    10.616509\n",
-       "32    23.675679\n",
-       "33    37.024805\n",
-       "34    50.114675\n",
-       "35     0.021014\n",
-       "36     0.135263\n",
-       "37     0.833435\n",
-       "38     4.060690\n",
-       "39     9.038539\n",
-       "40    14.165895\n",
-       "41    19.259696\n",
-       "Name: EF[g/km]_ECF[MJ/km]_Int, dtype: float64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Calculando PM para camiones EURO 5 a EURO 6\n",
     "consumo_Urb = df.loc[\n",
@@ -396,21 +343,19 @@
     "    ((df[\"Euro Standard\"] == \"E5\") | (df[\"Euro Standard\"] == \"E6\"))]\n",
     "consumo_Int = df.loc[(df[\"Category\"] == \"Heavy Duty Trucks\") & (df[\"Pollutant\"] == \"EC\") & \n",
     "    ((df[\"Euro Standard\"] == \"E5\") | (df[\"Euro Standard\"] == \"E6\"))]\n",
-    "pmUrb = df.loc[(df[\"Category\"] == \"Heavy Duty Trucks\") & (df[\"Pollutant\"] == \"PM Exhaust [g/kWh]\")]\n",
-    "pmInt = df.loc[(df[\"Category\"] == \"Heavy Duty Trucks\") & (df[\"Pollutant\"] == \"PM Exhaust [g/kWh]\")]\n",
+    "pm_E4E5 = df.loc[(df[\"Category\"] == \"Heavy Duty Trucks\") & (df[\"Pollutant\"] == \"PM Exhaust [g/kWh]\")]\n",
+    "\n",
     "#consumo_Urb[\"EF[g/km]_ECF[MJ/km]_Urb\"] * pmUrb[\"EF[g/km]_ECF[MJ/km]_Urb\"]\n",
-    "pmUrb = pmUrb.groupby([\"Segment\", \"Euro Standard\", \"Technology\", \"Road Slope\"], as_index=False).sum()\n",
-    "pmInt = pmInt.groupby([\"Segment\", \"Euro Standard\", \"Technology\", \"Road Slope\"], as_index=False).sum()\n",
-    "consumo_Urb = consumo_Urb.groupby([\"Segment\", \"Euro Standard\", \"Technology\", \"Road Slope\"], as_index=False).sum()\n",
-    "consumo_Int = consumo_Int.groupby([\"Segment\", \"Euro Standard\", \"Technology\", \"Road Slope\"], as_index=False).sum()\n",
-    "pmUrb = consumo_Urb[\"EF[g/km]_ECF[MJ/km]_Urb\"]*0.278*pmUrb[\"EF[g/km]_ECF[MJ/km]_Urb\"]\n",
-    "PM_fi = consumo_Int[\"EF[g/km]_ECF[MJ/km]_Int\"]*0.278*pmInt[\"EF[g/km]_ECF[MJ/km]_Int\"]\n",
-    "PM_fi"
+    "pm_E4E5 = pm_E4E5.groupby([\"Segment\",\"Fuel\",\"Pollutant\",\"Euro Standard\", \"Technology\", \"Road Slope\"], as_index=False).sum()\n",
+    "consumo_Urb = consumo_Urb.groupby([\"Segment\",\"Fuel\",\"Pollutant\", \"Euro Standard\", \"Technology\", \"Road Slope\"], as_index=False).sum()\n",
+    "consumo_Int = consumo_Int.groupby([\"Segment\",\"Fuel\",\"Pollutant\", \"Euro Standard\", \"Technology\", \"Road Slope\"], as_index=False).sum()\n",
+    "pm_E4E5[\"EF[g/km]_ECF[MJ/km]_Urb\"] = consumo_Urb[\"EF[g/km]_ECF[MJ/km]_Urb\"]*0.278*pm_E4E5[\"EF[g/km]_ECF[MJ/km]_Urb\"]\n",
+    "pm_E4E5[\"EF[g/km]_ECF[MJ/km]_Int\"] = consumo_Int[\"EF[g/km]_ECF[MJ/km]_Int\"]*0.278*pm_E4E5[\"EF[g/km]_ECF[MJ/km]_Int\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,21 +368,21 @@
     "dfCH4 = df.loc[df['Pollutant'] == 'CH4']\n",
     "dfCO2 = df.loc[df['Pollutant'] == 'EC']\n",
     "dfN2O = df.loc[df['Pollutant'] == 'N2O']\n",
-    "dfNH3 = df.loc[df['Pollutant'] == 'NH']"
+    "dfNH3 = df.loc[df['Pollutant'] == 'NH3']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-22-700cd9d13c91>:17: RuntimeWarning: divide by zero encountered in reciprocal\n",
+      "<ipython-input-16-700cd9d13c91>:17: RuntimeWarning: divide by zero encountered in reciprocal\n",
       "  dfCO2[[\"km/lt_urb\"]] = np.where(dfCO2[[\"Fuel\"]]==\"Gasolina\", (FC_urb/(gasDensidad*10**3))**-1,(FC_urb/(dieselDensidad*10**3))**-1)\n",
-      "<ipython-input-22-700cd9d13c91>:26: RuntimeWarning: divide by zero encountered in reciprocal\n",
+      "<ipython-input-16-700cd9d13c91>:26: RuntimeWarning: divide by zero encountered in reciprocal\n",
       "  dfCO2[[\"km/lt_int\"]] = np.where(dfCO2[[\"Fuel\"]]==\"Gasolina\", (FC_int/(gasDensidad*10**3))**-1,(FC_int/(dieselDensidad*10**3))**-1)\n"
      ]
     }
@@ -476,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 17,
    "metadata": {
     "id": "kgC0hXOHLFrG"
    },
@@ -494,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,6 +506,10 @@
     "gfVOC = dfVOC.groupby([\"Segment\",\"Fuel\",\"Euro Standard\"],as_index=False).mean()\n",
     "gfPM = dfPM.groupby([\"Segment\",\"Fuel\",\"Euro Standard\"],as_index=False).mean()\n",
     "gfCH4 = dfCH4.groupby([\"Segment\",\"Fuel\",\"Euro Standard\"],as_index=False).mean()\n",
+    "gkpm = pm_E4E5.groupby([\"Segment\", \"Pollutant\", \"Fuel\", 'Euro Standard'],as_index=False).mean()\n",
+    "gfN2O = dfN2O.groupby([\"Segment\",\"Fuel\",\"Euro Standard\"],as_index=False).mean()\n",
+    "gfNH3 = dfNH3.groupby([\"Segment\",\"Fuel\",\"Euro Standard\"],as_index=False).mean()\n",
+    "emPME4E5 = gkpm.iloc[:,[0,2,3,23,24]]\n",
     "#formater(gfNOx, \"NOx\").to_excel(\"NOx.xlsx\", index=False)\n",
     "#formater(gfCO, \"CO\").to_excel(\"CO.xlsx\", index=False)\n",
     "#formater(gfVOC, \"VOC\").to_excel(\"VOC.xlsx\", index=False)\n",
@@ -571,13 +520,46 @@
     "gfVOC = formater(gfVOC, \"VOC\")\n",
     "gfCH4 = formater(gfCH4, \"CH4\")\n",
     "gfPM = formater(gfPM, \"PM25\")\n",
+    "gfPM2 = formater2(emPME4E5, \"PM25\")\n",
+    "gfN2O = formater(gfN2O, \"N2O\")\n",
+    "gfNH3 = formater(gfNH3, \"NH3\")\n",
     "#pd.concat([gfNOx,gfCO,gfCH4,gfVOC, gfPM], axis=0).to_excel(\"FE.xlsx\", index=False)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 26,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Calculate NO2 and NH3 VLP/VLC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculando N2O para VLC/VLP\n",
+    "#ecuacion [a*kilometraje + b]*EFbase\n",
+    "kilometraje = 180000\n",
+    "xls = pd.ExcelFile(\"input/N2O_VLCVLP.xlsx\")\n",
+    "dfN2OVL = pd.read_excel(xls,\"0-30\", index_col=None)\n",
+    "dfN2OVL[\"N2O\"] = (dfN2OVL[\"a\"]*kilometraje+ dfN2OVL[\"b\"])*dfN2OVL[\"Base [mg/km]\"]/1000\n",
+    "gfN2O_2 = formater2(dfN2OVL.iloc[:,[0,1,2,6,6]],\"N2O\")\n",
+    "gfN2O_f = pd.concat([gfN2O,gfN2O_2], axis=0)\n",
+    "xls2 = pd.ExcelFile(\"input/NH3_VLCVLP.xlsx\")\n",
+    "dfNH3VL = pd.read_excel(xls2,\"0-30\", index_col=None)\n",
+    "dfNH3VL[\"NH3\"] = (dfNH3VL[\"a\"]*kilometraje + dfNH3VL[\"b\"])*dfNH3VL[\"Base [mg/km]\"]/1000\n",
+    "gfNH3_2 = formater2(dfNH3VL.iloc[:,[0,1,2,6,6]],\"N2O\")\n",
+    "gfNH3_f = pd.concat([gfNH3,gfNH3_2], axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "gk = df.groupby([\"Segment\", \"Pollutant\", \"Fuel\", 'Euro Standard'],as_index=False).mean()\n",
@@ -595,7 +577,7 @@
     "gfCO2 = formater2(emCO2, \"CO2\")\n",
     "gfkmLt = formater2(kmLt, \"km/lt\")\n",
     "#(df[df[\"Segment\"]==\"CAM PES\"][\"Max Speed [km/h]\"])\n",
-    "gf_concat = pd.concat([gfNOx,gfCO,gfCH4,gfVOC, gfPM, gfSOx, gfCO2, gfkmLt], axis=0)\n",
+    "gf_concat = pd.concat([gfNOx,gfCO,gfCH4,gfVOC, gfPM, gfPM2, gfSOx, gfCO2, gfkmLt, gfNH3_f, gfN2O_f], axis=0)\n",
     "#final.to_excel(\"NOx.xlsx\", index=False)\n",
     "n = 2060-2014\n",
     "years = (pd.concat([gf_concat[[\"2014\"]]] * n, axis=1, ignore_index=True)).rename(lambda x: str(2015 + x), axis=1)\n",
@@ -613,11 +595,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Modo</th>\n",
+       "      <th>Motorizacion</th>\n",
+       "      <th>Norma</th>\n",
+       "      <th>BC</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BUS ART</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>No cat</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BUS ART</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>E1</td>\n",
+       "      <td>0.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BUS ART</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>E2</td>\n",
+       "      <td>0.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BUS ART</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>E3</td>\n",
+       "      <td>0.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>BUS ART</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>E4</td>\n",
+       "      <td>0.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>MOT</td>\n",
+       "      <td>Gasolina</td>\n",
+       "      <td>E2</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>MOT</td>\n",
+       "      <td>Gasolina</td>\n",
+       "      <td>E3</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>74</th>\n",
+       "      <td>MOT</td>\n",
+       "      <td>Gasolina</td>\n",
+       "      <td>E4</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>MOT</td>\n",
+       "      <td>Gasolina</td>\n",
+       "      <td>E5</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>MOT</td>\n",
+       "      <td>Gasolina</td>\n",
+       "      <td>E6</td>\n",
+       "      <td>0.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>77 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Modo Motorizacion   Norma    BC\n",
+       "0   BUS ART       Diesel  No cat  0.50\n",
+       "1   BUS ART       Diesel      E1  0.65\n",
+       "2   BUS ART       Diesel      E2  0.65\n",
+       "3   BUS ART       Diesel      E3  0.70\n",
+       "4   BUS ART       Diesel      E4  0.75\n",
+       "..      ...          ...     ...   ...\n",
+       "72      MOT     Gasolina      E2  0.50\n",
+       "73      MOT     Gasolina      E3  0.50\n",
+       "74      MOT     Gasolina      E4  0.50\n",
+       "75      MOT     Gasolina      E5  0.50\n",
+       "76      MOT     Gasolina      E6  0.50\n",
+       "\n",
+       "[77 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = pd.read_excel('input/factores_bc.xlsx')\n",
+    "df2.sort_values(\"Modo\")\n",
+    "pm_concat = pd.concat([gfPM,gfPM2], axis=0)\n",
+    "\n",
+    "df3 = pm_concat.merge(df2,left_on=[\"Modo\",\"Motorizacion\",\"Norma\"],right_on=[\"Modo\",\"Motorizacion\",\"Norma\"],how=\"left\")\n",
+    "df3[\"BC_f\"] = df3[\"2014\"] * df3[\"BC\"]\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Archivo Velocidades Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "gfPM.to_excel(\"pm.xlsx\",index=False)"
+    "df2 = pd.read_excel(\"input/Velocidades.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-24-971851137309>:18: FutureWarning: Automatic reindexing on DataFrame vs Series comparisons is deprecated and will raise ValueError in a future version. Do `left, right = left.align(right, axis=1, copy=False)` before e.g. `left == right`\n",
+      "  np.where(vel > bdf[\"Max Speed [km/h]\"],1, 0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bdf = df2.merge(df, left_on=[\"Modo\", \"Motorizacion\", \"Norma\"], right_on=[\"Segment\",\"Fuel\",\"Euro Standard\"], how=\"left\")\n",
+    "alpha = bdf[[\"Alpha\"]].astype(\"float\")\n",
+    "beta = bdf[[\"Beta\"]].astype(\"float\")\n",
+    "gamma = bdf[[\"Gamma\"]].astype(\"float\")\n",
+    "delta = bdf[[\"Delta\"]].astype(\"float\")\n",
+    "epsilon = bdf[[\"Epsilon\"]].astype(\"float\")\n",
+    "zeta = bdf[[\"Zita\"]].astype(\"float\")\n",
+    "hta = bdf[[\"Hta\"]].astype(\"float\")\n",
+    "redFactor = bdf[[\"Reduction Factor [%]\"]].astype(\"float\")\n",
+    "bdf.columns\n",
+    "vel = bdf.iloc[:,7:len(df2.columns)]\n",
+    "\n",
+    "discriminante = (epsilon.values*vel**2+zeta.values*vel+hta.values)\n",
+    "EFs = np.where(discriminante < 0, 0, (1 - redFactor.values)*((alpha.values * vel**2 + beta.values * vel \n",
+    "+ gamma.values + (delta.values/vel)) / (discriminante)))\n",
+    "EFs = pd.DataFrame(EFs)\n",
+    "EFs.columns = vel.columns\n",
+    "np.where(vel > bdf[\"Max Speed [km/h]\"],1, 0)"
    ]
   },
   {
