--- a/FE_Vel.ipynb
+++ b/FE_Vel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "afc4d25d-7c99-48c7-aecb-e78c4c4ca199",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "id": "c2b90ce3-83e5-4e54-af3a-423351b23769",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "559344e7-a512-4d10-85cc-5c8bee333582",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "id": "018abf06-2351-4d01-a0f3-8f1d75806cc1",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "id": "ca4d48e7-aa7c-4e06-bd57-978e23a31597",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "id": "a1b05159-9387-474b-a2c6-7ee7b16f6788",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        "array([nan, 'Urban Peak', 'Highway', 'Hot'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "c67db047-0567-42d4-82f0-3127894520fc",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "id": "1c5e9542-2ed8-43fc-a70b-7cc5e71ee897",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "fcadad8a-9bef-482c-b5f5-aac3f8c4f393",
    "metadata": {},
    "outputs": [],
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "12755c11-80ee-4203-bcf4-584b203a671d",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "2aa43ddb-217d-4218-8ae0-ae666e5aa9bb",
    "metadata": {},
    "outputs": [],
@@ -219,10 +219,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "id": "5fcf0c8e-618e-440d-a3c5-5ed0a28d0fdc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['CH4', 'CO', 'EC', 'N2O', 'NH3', 'NOx', 'PM Exhaust',\n",
+       "       'SPN23 [#/kWh]', 'VOC', 'PM Exhaust [g/kWh]', 'SPN23'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#checkeo si supera la velocidad máxima o es inferior a la mínima\n",
     "vel2 = np.where(vel.gt(bdf[\"Max Speed [km/h]\"], axis=0),bdf[[\"Max Speed [km/h]\"]],vel) \n",
@@ -236,7 +249,8 @@
     "EFs.columns = vel.columns\n",
     "EFs = pd.concat([bdf.iloc[:,[0,1,2,3,4,-20]],EFs],axis=1)\n",
     "EFs = EFs.groupby([\"Region\",\"Ambito\",\"Modo\",\"Motorizacion\",'Norma',\"Pollutant\"],as_index=False).mean()\n",
-    "#EFs.loc[(EFs[\"Modo\"]==\"BUS RIG\") & (EFs[\"Region\"]==\"R13\") & (EFs[\"Pollutant\"]==\"PM Exhaust\")]"
+    "#EFs.loc[(EFs[\"Modo\"]==\"BUS RIG\") & (EFs[\"Region\"]==\"R13\") & (EFs[\"Pollutant\"]==\"PM Exhaust\")]\n",
+    "EFs[\"Pollutant\"].unique()"
    ]
   },
   {
@@ -320,7 +334,7 @@
     "#Calculo N2O y NH3\n",
     "kilometraje = pd.read_excel(\"input/kilometraje.xlsx\")\n",
     "xls = pd.ExcelFile(\"input/N2O_VLCVLP.xlsx\")\n",
-    "dfN2OVL = pd.read_excel(xls,\"0-30\", index_col=None)\n",
+    "dfN2OVL = pd.read_excel(xls,\"0-30\", index_col=None) #contenido de azufre (ppm) en el combustible\n",
     "#dfN2OVL[\"N2O\"] = (dfN2OVL[\"a\"]*kilometraje+ dfN2OVL[\"b\"])*dfN2OVL[\"Base [mg/km]\"]/1000\n",
     "km = kilometraje.loc[((kilometraje[\"Modo\"]==\"VLP\") | (kilometraje[\"Modo\"]==\"VLC\"))]\n",
     "mkm = km.merge(dfN2OVL, left_on=[\"Modo\", \"Motorizacion\", \"Norma\"], right_on=[\"Modo\",\"Motorizacion\",\"Norma\"], how=\"left\")\n",
@@ -373,7 +387,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calculating NO and NOx \n",
+    "#Calculating NO and NO2\n",
     "df_nox = pd.read_excel('input/factores_NOx.xlsx')\n",
     "df_nox.sort_values(\"Modo\")\n",
     "nox_concat = EF.loc[ EF[\"Pollutant\"]==\"NOx\"]\n",
@@ -388,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "dea50f97-0bdd-4dff-ae60-b0c69f55e440",
    "metadata": {},
    "outputs": [],
